# senior-code-mcp

./: .gitignore  AGENTS.md  FINALS.md  README.md  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
eval/: coir_bench.py  retrieval_ab.py
eval/results/: cosqa.json  retrieval_ab.txt
src/code_context_mcp/: __init__.py  server.py
src/code_context_mcp/ingest/: chunker.py  parser.py
src/code_context_mcp/store/: vectors.py
src/senior_code_mcp/: __init__.py  cli.py  pipeline.py  server.py
src/senior_code_mcp/ingest/: __init__.py  chunker.py  parser.py
src/senior_code_mcp/store/: __init__.py  graph.py  vectors.py
