[project]
name = "code-context-mcp"
version = "0.1.0"
description = "MCP server for semantic + structural code search over a codebase"
readme = "README.md"
authors = [
    { name = "Tamaz_Sujashvili", email = "Notavailablehacker@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp",
    "qdrant-client",
    "tree-sitter",
    "tree-sitter-python",
    "networkx",
    "httpx",
]

[project.scripts]
code-context-mcp = "code_context_mcp.server:main"
code-context-ingest = "code_context_mcp.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
