[project]
name = "senior-code-mcp"
version = "0.1.0"
description = "Senior Code MCP — semantic + structural code search for coding agents"
readme = "README.md"
authors = [
    { name = "Tamaz_Sujashvili", email = "Notavailablehacker@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "qdrant-client",
    "tree-sitter",
    "tree-sitter-python",
    "networkx",
    "httpx",
]

[project.scripts]
senior-code-mcp = "senior_code_mcp.server:main"
senior-code-ingest = "senior_code_mcp.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
